--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Sanjay Nathani",
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
+    "angular2": "5.0.1",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
@@ -30,28 +30,30 @@
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.25",
     "typescript": "1.8.10",
-    "zone.js": "0.6.6"
+    "zone.js": "0.6.6",
+    "run-sequence": "1.1.5"
   },
   "devDependencies": {
-    "angular2": "2.0.0-beta.13",
+    "angular2": "5.0.1",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-inline-ng2-template": "0.0.10",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "2.6.0",
+    "gulp-inject": "3.0.0",
+    "gulp-inline-ng2-template": "0.0.10",
+    "gulp-install": "^1.1.0",
+    "gulp-load-plugins": "1.1.0",
     "gulp-sourcemaps": "1.6.0",
     "gulp-typescript": "2.10.0",
-    "gulp-load-plugins": "1.1.0",
-    "gulp-inject": "3.0.0",
     "gzippo": "^0.2.0",
     "path": "^0.12.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.25",
-    "zone.js": "0.6.6",
     "typescript": "1.8.10",
+    "zone.js": "0.6.6",
     "run-sequence": "1.1.5"
   }
 }
