--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Sanjay Nathani",
   "license": "ISC",
   "dependencies": {
-    "angular2": "5.0.1",
+    "angular": "5.0.1",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
@@ -34,7 +34,7 @@
     "run-sequence": "1.1.5"
   },
   "devDependencies": {
-    "angular2": "5.0.1",
+    "angular": "5.0.1",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
