--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Sanjay Nathani",
   "license": "ISC",
   "dependencies": {
-    "angular": "2.0.0-beta.13",
+    "angular": ">=2.0.0-beta.13",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
@@ -38,7 +38,7 @@
     "run-sequence": "1.1.5"
   },
   "devDependencies": {
-    "angular": "2.0.0-beta.13",
+    "angular": ">=2.0.0-beta.13",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
