--- a/package.json
+++ b/package.json
@@ -15,7 +15,17 @@
   "author": "Sanjay Nathani",
   "license": "ISC",
   "dependencies": {
-    "angular": ">=2.0.0-beta.13",
+    "@angular/animations": "^5.0.1",
+    "@angular/common": "^5.0.1",
+    "@angular/compiler": "^5.0.1",
+    "@angular/compiler-cli": "^5.0.1",
+    "@angular/core": "^5.0.1",
+    "@angular/forms": "^5.0.1",
+    "@angular/http": "^5.0.1",
+    "@angular/platform-browser": "^5.0.1",
+    "@angular/platform-browser-dynamic": "^5.0.1",
+    "@angular/platform-server": "^5.0.1",
+    "@angular/router": "^5.0.1",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
@@ -31,14 +41,23 @@
     "gzippo": "^0.2.0",
     "path": "^0.12.7",
     "reflect-metadata": "0.1.2",
+    "run-sequence": "1.1.5",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.25",
-    "typescript": "1.8.10",
-    "zone.js": "0.6.6",
-    "run-sequence": "1.1.5"
+    "zone.js": "0.6.6"
   },
   "devDependencies": {
-    "angular": ">=2.0.0-beta.13",
+    "@angular/animations": "^5.0.1",
+    "@angular/common": "^5.0.1",
+    "@angular/compiler": "^5.0.1",
+    "@angular/compiler-cli": "^5.0.1",
+    "@angular/core": "^5.0.1",
+    "@angular/forms": "^5.0.1",
+    "@angular/http": "^5.0.1",
+    "@angular/platform-browser": "^5.0.1",
+    "@angular/platform-browser-dynamic": "^5.0.1",
+    "@angular/platform-server": "^5.0.1",
+    "@angular/router": "^5.0.1",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
@@ -54,10 +73,10 @@
     "gzippo": "^0.2.0",
     "path": "^0.12.7",
     "reflect-metadata": "0.1.2",
+    "run-sequence": "1.1.5",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.25",
-    "typescript": "1.8.10",
-    "zone.js": "0.6.6",
-    "run-sequence": "1.1.5"
+    "typescript": "^2.6.1",
+    "zone.js": "0.6.6"
   }
 }
