--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": "9.2.0",
     "npm": "5.5.1"
   },
-  "keywords": [],
+  "keywords": [RD],
   "author": "Sanjay Nathani",
   "license": "ISC",
   "dependencies": {
